--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.7",
     "@tryghost/content-api": "^1.5.12",
+    "classnames": "^2.3.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -22,6 +23,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "postcss": "^8.3.6",
+    "postcss-focus-visible": "^5.0.0",
     "tailwindcss": "^2.2.7",
     "typescript": "4.3.5"
   }
