--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "classnames": "^2.3.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.0.0",
+    "rehype-parse": "^8.0.2",
+    "rehype-remark": "^9.0.0",
+    "rehype-sanitize": "^5.0.0",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-slug": "^7.0.0",
+    "remark-stringify": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
