--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components": ["src/components/index"],
-      "@/lib/*": ["src/lib/*"]
+      "@/lib": ["src/lib/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
